feat. remove lombok